--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
+    compile 'com.inthecheesefactory.thecheeselibrary:adjustable-imageview:1.0.1'
+    compile 'com.github.bumptech.glide:glide:3.6.1'
+    compile 'com.android.support:palette-v7:23.1.1'
 }
