--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity
             android:name=".view.post.PostReaderActivity"
+            android:launchMode="singleTask"
             android:theme="@style/DraggerTheme" />
     </application>
 
