Add post content and debug post content Add view post for plaint text, code, image and header

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
             android:name=".view.post.PostReaderActivity"
             android:launchMode="singleTask"
             android:theme="@style/DraggerTheme" />
+        <activity
+            android:name=".view.post.PostActivity"
+            android:launchMode="singleTask" />
+        <activity
+            android:name=".view.post.DebugPostActivity"
+            android:launchMode="singleTask" />
     </application>
 
 </manifest>
