--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,12 +11,16 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    aaptOptions {
+        additionalParameters "--no-version-vectors"
     }
 }
 
