--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.feed.MainActivity">
+        <activity
+            android:name=".view.feed.MainActivity"
+            android:screenOrientation="fullSensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,16 +23,20 @@
         <activity
             android:name=".view.post.PostReaderActivity"
             android:launchMode="singleTask"
+            android:screenOrientation="fullSensor"
             android:theme="@style/DraggerTheme" />
         <activity
             android:name=".view.post.PostActivity"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".view.post.DebugPostActivity"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".view.post.ImagePostPreviewActivity"
             android:launchMode="singleTask"
+            android:screenOrientation="fullSensor"
             android:theme="@style/ImagePreviewTheme" />
     </application>
 
