--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:customtabs:23.2.1'
+    compile 'rebus:bottom-dialog:0.0.5'
+    compile 'com.github.renaudcerrato:FloatingSearchView:1.0.0'
+    compile 'com.bowyer.app:fabtransitionlayout:0.3.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.squareup:otto:1.3.8'
