--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:theme="@style/PopupTheme" />
 
         <activity
-            android:name=".view.search.SearchPostActivity"
+            android:name=".view.search.SearchActivity"
             android:launchMode="singleTask"
             android:screenOrientation="fullSensor"
             android:theme="@style/PopupTheme" />
