--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:customtabs:23.2.1'
-    compile 'rebus:bottom-dialog:0.0.5'
+    compile 'uk.co.chrisjenx:calligraphy:2.1.0'
     compile 'com.flipboard:bottomsheet-commons:1.5.0'
     compile 'com.github.renaudcerrato:FloatingSearchView:1.0.0'
     compile 'com.bowyer.app:fabtransitionlayout:0.3.0'
