--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ dependencies {
     compile 'com.flipboard:bottomsheet-commons:1.5.0'
     compile 'com.github.renaudcerrato:FloatingSearchView:1.0.0'
     compile 'com.bowyer.app:fabtransitionlayout:0.3.0'
-    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     compile 'com.inthecheesefactory.thecheeselibrary:adjustable-imageview:1.0.1'
