Add settings Add clear all cache

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ buildscript {
         maven {
             url 'http://dl.bintray.com/raphaelbussa/maven'
         }
+        maven {
+            url 'http://oss.sonatype.org/content/repositories/snapshots'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0-alpha3'
@@ -28,6 +31,9 @@ allprojects {
         }
         maven {
             url 'http://dl.bintray.com/raphaelbussa/maven'
+        }
+        maven {
+            url 'http://oss.sonatype.org/content/repositories/snapshots'
         }
     }
 }
