--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.CLEAR_APP_CACHE" />
 
     <application
         android:name=".SFLApplication"
@@ -24,66 +25,68 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".view.post.PostByIdActivity"
             android:screenOrientation="fullSensor" />
-
         <activity
             android:name=".view.post.PostByPathActivity"
             android:screenOrientation="fullSensor" />
-
         <activity
             android:name=".view.post.DebugPostActivity"
             android:launchMode="singleTask"
             android:screenOrientation="fullSensor" />
-
         <activity
             android:name=".view.post.ImagePostPreviewActivity"
             android:launchMode="singleTask"
             android:screenOrientation="fullSensor"
             android:theme="@style/PopupTheme" />
-
         <activity
             android:name=".view.search.SearchActivity"
             android:launchMode="singleTask"
             android:screenOrientation="fullSensor"
             android:theme="@style/PopupTheme" />
-
         <activity
             android:name=".view.search.SearchResultActivity"
             android:launchMode="singleTask" />
-
         <activity
             android:name=".view.bookmark.BookmarkActivity"
             android:launchMode="singleTask" />
-
         <activity
             android:name=".view.offline.OfflinePostActivity"
             android:launchMode="singleTask" />
-
         <activity
             android:name=".view.offline.OfflineImagePostPreviewActivity"
             android:launchMode="singleTask" />
-
         <activity
             android:name=".view.deeplink.LinkActivity"
             android:theme="@android:style/Theme.NoDisplay" />
+        <activity android:name=".view.settings.SettingsActivity" />
 
+        <activity
+            android:name=".view.settings.SettingsActionActivity"
+            android:theme="@android:style/Theme.NoDisplay" />
         <activity
             android:name="com.airbnb.deeplinkdispatch.DeepLinkActivity"
             android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="akexorcist.com" android:scheme="http" />
+
+                <data
+                    android:host="akexorcist.com"
+                    android:scheme="http" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="www.akexorcist.com" android:scheme="http" />
+
+                <data
+                    android:host="www.akexorcist.com"
+                    android:scheme="http" />
             </intent-filter>
         </activity>
 
@@ -106,7 +109,6 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
         </service>
-
         <service
             android:name=".gcm.GcmTokenRefreshService"
             android:exported="false">
@@ -114,7 +116,6 @@
                 <action android:name="com.google.android.gms.iid.InstanceID" />
             </intent-filter>
         </service>
-
         <service
             android:name=".gcm.GcmRegisterService"
             android:exported="false" />
