--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:customtabs:23.2.1'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile 'com.google.android.gms:play-services-analytics:8.4.0'
     compile 'io.realm:realm-android:0.87.5'
     compile 'com.jenzz:materialpreference:1.3'
     compile 'com.github.justzak:dilatingdotsprogressbar:1.0.1'
