--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-analytics:8.4.0'
     compile 'io.realm:realm-android:0.87.5'
     compile 'cat.ereza:customactivityoncrash:1.5.0'
+    compile 'it.sephiroth.android.library.viewrevealanimator:view-reveal-animator:1.1.4'
     compile 'com.jenzz:materialpreference:1.3'
     compile 'com.github.justzak:dilatingdotsprogressbar:1.0.1'
     compile 'uk.co.chrisjenx:calligraphy:2.1.0'
