--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".view.feed.MainActivity"
+
+
+        <activity android:name=".view.splashscreen.SplashScreenActivity"
             android:screenOrientation="fullSensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter></activity>
+
+        <activity
+            android:name=".view.feed.MainActivity"
+            android:screenOrientation="fullSensor">
         </activity>
         <activity
             android:name=".view.post.PostByIdActivity"
@@ -58,20 +63,16 @@
         <activity
             android:name=".view.offline.OfflineImagePostPreviewActivity"
             android:launchMode="singleTask" />
-
         <activity
             android:name=".view.deeplink.LinkActivity"
             android:theme="@android:style/Theme.NoDisplay" />
-
         <activity
             android:name=".view.settings.SettingsActivity"
             android:launchMode="singleTask" />
-
         <activity
             android:name=".view.settings.SettingsActionActivity"
             android:launchMode="singleTask"
             android:theme="@android:style/Theme.NoDisplay" />
-
         <activity
             android:name="com.airbnb.deeplinkdispatch.DeepLinkActivity"
             android:theme="@android:style/Theme.NoDisplay">
@@ -96,9 +97,7 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
-
         <activity android:name=".view.settings.OpenSourceLicensesActivity" />
-
         <activity
             android:name="cat.ereza.customactivityoncrash.activity.DefaultErrorActivity"
             android:process=":error_activity"
@@ -124,7 +123,6 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
         </service>
-
         <service
             android:name=".gcm.GcmTokenRefreshService"
             android:exported="false">
@@ -132,7 +130,6 @@
                 <action android:name="com.google.android.gms.iid.InstanceID" />
             </intent-filter>
         </service>
-
         <service
             android:name=".gcm.GcmRegisterService"
             android:exported="false" />
