--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,19 +3,21 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.akexorcist.sleepingforless"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
         versionName "1.0.0"
         vectorDrawables.useSupportLibrary = true
+        renderscriptTargetApi 23
+        renderscriptSupportModeEnabled true
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -36,6 +38,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-analytics:8.4.0'
     compile 'io.realm:realm-android:0.87.5'
     compile 'cat.ereza:customactivityoncrash:1.5.0'
+    compile 'com.ms-square:etsyblur:0.1.3'
     compile 'it.sephiroth.android.library.viewrevealanimator:view-reveal-animator:1.1.4'
     compile 'com.jenzz:materialpreference:1.3'
     compile 'com.github.justzak:dilatingdotsprogressbar:1.0.1'
@@ -48,10 +51,8 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
-    compile 'com.inthecheesefactory.thecheeselibrary:adjustable-imageview:1.0.1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.balysv:material-ripple:1.0.2'
-    compile 'com.github.ppamorim:dragger:1.2'
     compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.4.1'
     compile 'org.parceler:parceler-api:1.0.4'
     apt 'org.parceler:parceler:1.0.4'
