--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,20 +17,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
-        <activity android:name=".view.splashscreen.SplashScreenActivity"
+        <activity
+            android:name=".view.splashscreen.SplashScreenActivity"
             android:screenOrientation="fullSensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter></activity>
-
+            </intent-filter>
+        </activity>
         <activity
             android:name=".view.feed.MainActivity"
-            android:screenOrientation="fullSensor">
-        </activity>
+            android:launchMode="singleTask"
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".view.post.PostByIdActivity"
             android:screenOrientation="fullSensor" />
@@ -53,22 +52,27 @@
             android:theme="@style/PopupTheme" />
         <activity
             android:name=".view.search.SearchResultActivity"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".view.bookmark.BookmarkActivity"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".view.offline.OfflinePostActivity"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".view.offline.OfflineImagePostPreviewActivity"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".view.deeplink.LinkActivity"
             android:theme="@android:style/Theme.NoDisplay" />
         <activity
             android:name=".view.settings.SettingsActivity"
-            android:launchMode="singleTask" />
+            android:launchMode="singleTask"
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".view.settings.SettingsActionActivity"
             android:launchMode="singleTask"
@@ -97,7 +101,15 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.settings.OpenSourceLicensesActivity" />
+        <activity
+            android:name=".view.settings.OpenSourceLicensesActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="fullSensor" />
+        <activity
+            android:name=".view.message.MessageActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/TransparentTheme" />
         <activity
             android:name="cat.ereza.customactivityoncrash.activity.DefaultErrorActivity"
             android:process=":error_activity"
