--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.github.javiersantos:MaterialStyledDialogs:1.3'
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+    compile 'it.sephiroth.android.library.targettooltip:target-tooltip-library:1.3.14'
     compile 'com.squareup:otto:1.3.8'
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     compile 'com.github.bumptech.glide:glide:3.6.1'
