--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,10 +7,10 @@ android {
 
     defaultConfig {
         applicationId "com.akexorcist.sleepingforless"
-        minSdkVersion 17
+        minSdkVersion 18
         targetSdkVersion 26
-        versionCode 9
-        versionName "1.0.8"
+        versionCode 10
+        versionName "1.0.9"
         vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
@@ -33,8 +33,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation files('src/main/libs/sdk-v1.0.0.jar')
-    implementation files('src/main/libs/multiwindow-v1.3.1.jar')
+    implementation project(':fabtransitionlayout')
     androidTestImplementation 'org.mockito:mockito-core:2.8.47'
     androidTestImplementation 'com.google.dexmaker:dexmaker:1.2'
     androidTestImplementation 'com.google.dexmaker:dexmaker-mockito:1.2'
@@ -47,8 +46,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:customtabs:26.1.0'
-    implementation 'com.google.android.gms:play-services-gcm:11.4.2'
-    implementation 'com.google.android.gms:play-services-analytics:11.4.2'
+    implementation 'com.google.android.gms:play-services-gcm:11.8.0'
+    implementation 'com.google.android.gms:play-services-analytics:11.8.0'
     implementation 'cat.ereza:customactivityoncrash:2.1.0'
     implementation 'it.sephiroth.android.library.viewrevealanimator:view-reveal-animator:1.1.4'
     implementation 'com.jenzz:materialpreference:1.3'
@@ -56,24 +55,26 @@ dependencies {
     implementation 'uk.co.chrisjenx:calligraphy:2.2.0'
     implementation 'com.flipboard:bottomsheet-commons:1.5.0'
     implementation 'com.github.renaudcerrato:FloatingSearchView:1.0.0'
-    implementation 'com.bowyer.app:fabtransitionlayout:0.3.0'
     implementation 'com.github.javiersantos:MaterialStyledDialogs:1.3'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'it.sephiroth.android.library.targettooltip:target-tooltip-library:1.3.14'
     implementation 'com.squareup:otto:1.3.8'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     implementation 'com.github.bumptech.glide:glide:4.2.0'
     implementation 'com.balysv:material-ripple:1.0.2'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.4.1'
     implementation 'org.parceler:parceler-api:1.1.9'
     annotationProcessor 'org.parceler:parceler:1.1.9'
-    implementation 'com.airbnb:deeplinkdispatch:1.5.0'
+    implementation('com.airbnb:deeplinkdispatch:1.5.0') {
+        transitive = true
+    }
     annotationProcessor 'com.airbnb:deeplinkdispatch-processor:1.5.0'
+    implementation 'com.squareup.okio:okio:1.13.0'
     implementation('com.github.afollestad:assent:0.2.0') {
         transitive = true
     }
-    implementation 'com.jayway.android.robotium:robotium-solo:5.5.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
