Update gradle and dependency

--- a/fabtransitionlayout/build.gradle
+++ b/fabtransitionlayout/build.gradle
@@ -10,12 +10,12 @@ repositories {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 17
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 4
         versionName '0.4.0'
     }
@@ -29,7 +29,7 @@ android {
 
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.github.ozodrukh:CircularReveal:2.1.0'
-    compile 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation 'com.github.ozodrukh:CircularReveal:2.1.0'
+    implementation 'com.android.support:design:27.1.1'
 }
