--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "com.akexorcist.sleepingforless"
         minSdkVersion 18
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 11
         versionName "1.0.9"
         vectorDrawables.useSupportLibrary = true
@@ -41,13 +41,14 @@ dependencies {
         exclude module: 'hamcrest-core'
     }
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:customtabs:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:customtabs:27.1.1'
     implementation 'com.google.android.gms:play-services-gcm:11.8.0'
     implementation 'com.google.android.gms:play-services-analytics:11.8.0'
+    implementation 'com.google.firebase:firebase-appindexing:11.8.0'
     implementation 'cat.ereza:customactivityoncrash:2.1.0'
     implementation 'it.sephiroth.android.library.viewrevealanimator:view-reveal-animator:1.1.4'
     implementation 'com.jenzz:materialpreference:1.3'
@@ -56,12 +57,12 @@ dependencies {
     implementation 'com.flipboard:bottomsheet-commons:1.5.0'
     implementation 'com.github.renaudcerrato:FloatingSearchView:1.0.0'
     implementation 'com.github.javiersantos:MaterialStyledDialogs:1.3'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'it.sephiroth.android.library.targettooltip:target-tooltip-library:1.3.14'
     implementation 'com.squareup:otto:1.3.8'
-    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     implementation 'com.balysv:material-ripple:1.0.2'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.4.1'
@@ -71,7 +72,7 @@ dependencies {
         transitive = true
     }
     annotationProcessor 'com.airbnb:deeplinkdispatch-processor:1.5.0'
-    implementation 'com.squareup.okio:okio:1.13.0'
+    implementation 'com.squareup.okio:okio:1.14.0'
     implementation('com.github.afollestad:assent:0.2.0') {
         transitive = true
     }
